--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         <tr>
             <td>
                 <!-- Form: https://developer.mozilla.org/en-US/docs/Web/HTML/Element#forms -->
-                <form action="mailto:abhisit_u@bu.ac.th" method="POST" enctype="text/plain">
+                <form action="mailto:kantaruethai.sitt@bumail.net" method="POST" enctype="text/plain">
                     <label for="yourName">Your Name:</label>
                     <input type="text" id="yourName" name="yourName" value="">
                     <br>
