--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Abhisit Profile Site</title>
+    <title>Kantaruethai Profile Site</title>
     <link href='https://fonts.googleapis.com/css?family=Aclonica'rel='stylesheet'>
     <!--line 7,18: Exeternal Resource Link  
         font-family Ref:https://www.w3schools.com/whatis/tryit.asp?font=Aclonica -->
