--- a/index.html
+++ b/index.html
@@ -68,5 +68,24 @@
     </table>
     <hr>
     <p style="text-align: center;">© 2022 Kantaruethai Sittisat</p>
+    <!-- home section starts  -->
+
+<section class="home">
+
+    <div class="image">
+        <img src="images/profile.png" alt="">
+    </div>
+
+    <div class="content">
+        <h3>hi, i am Kantaruethai Sittisat</h3>
+       
+      
+        <a href="about.html" class="btn"> about me <i class="fas fa-user"></i> </a>
+    </div>
+
+</section>
+
+<!-- home section ends -->
+
 </body>
 </html>
