--- a/abilities.html
+++ b/abilities.html
@@ -4,10 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Kantaruethai Sittisat</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 
 <body>
+    <!-- navbar section starts  -->
+
+<nav class="navbar">
+    <a href="index.html" class="active"> <i class="fas fa-user"></i> <span>profile</span> </a>
+    <a href="about.html"> <i class="fas fa-address-card"></i> <span>about</span> </a>
+    <a href="projects.html"> <i class="fas fa-briefcase"></i> <span>projects</span> </a>
+    <a href="contact.html"> <i class="fas fa-address-book"></i> <span>contact</span> </a>
+</nav>
+
+<!-- navbar section ends -->
+
     <!-- Menu -->
     <hr>
     <table style="width:100%; text-align: center">
