--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,8 @@
     <link href='https://fonts.googleapis.com/css?family=Aclonica'rel='stylesheet'>
     <!--line 7,18: Exeternal Resource Link  
         font-family Ref:https://www.w3schools.com/whatis/tryit.asp?font=Aclonica -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+        
 </head>
 
 <body>
@@ -70,5 +72,6 @@
     </table>
     <hr>
     <p style="text-align: center;">© 2022 Kantaruethai Sittisat</p>
+    
 </body>
 </html>
